Solved issue with unsuported mix-blend-mode Added animation on subscribe-cta button clicked Hidden subscribe-cta on small and medium screens

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,12 @@
 @import '~variables.scss';
 
+
+app-subscribe-cta{
+    @media screen and (max-width: $break-medium){
+        display: none;
+    }
+}
+
 .anchor-link{
     @media screen and (max-width:$break-small) {
         font-size: 11px;
